--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,14 @@
         height: 6em;
         vertical-align: top;
 }
+
+.lightbox::after {
+        content: "\2921";
+        display: block;
+        position: absolute;
+        color: #fff;
+        text-shadow: 2px 2px 4px #000;
+        font-size: 2em;
+        top: 0;
+        right: 0;
+}
