Set after content state
'Open' JS class needs to trigger a change in lightbox's height. Height will animate over one-second duration.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,11 @@
 .lightbox > img {
         height: 100%;
 }
+
+.lightbox.open {
+        height: 80vh;
+}
+
+.lightbox.open::after {
+        content: "\00d7";
+}
